--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 .light {
   max-width: 100%;
   position: absolute;
-  top: 0;
+  top: -5px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
